--- a/frontend/capacitor.config.json
+++ b/frontend/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-  "appId": "com.levaapp.app",
-  "appName": "Leva App",
+  "appId": "com.moveapp.app",
+  "appName": "Move",
   "webDir": "build",
   "server": {
     "androidScheme": "https",
