--- a/frontend/android/build.gradle
+++ b/frontend/android/build.gradle
@@ -1,12 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext {
+        buildToolsVersion = "34.0.0"
+        minSdkVersion = 21
+        compileSdkVersion = 34
+        targetSdkVersion = 34
+        ndkVersion = "25.1.8937393"
+        kotlinVersion = "1.8.0"
+    }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.2'
+        classpath('com.android.tools.build:gradle:8.1.0')
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
     }
 }
 
@@ -15,7 +24,7 @@ apply from: "variables.gradle"
 allprojects {
     repositories {
         google()
-        mavenCentral()
+        jcenter()
     }
     
     afterEvaluate { project ->
@@ -36,9 +45,6 @@ allprojects {
 }
 
 ext {
-    compileSdkVersion = 32
-    targetSdkVersion = 32
-    minSdkVersion = 22
     androidxAppCompatVersion = '1.6.1'
 }
 
