--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -25,5 +25,8 @@
   "display": "standalone",
   "theme_color": "#4C1D95",
   "background_color": "#ffffff",
-  "orientation": "portrait"
+  "orientation": "portrait",
+  "notifications": {
+    "sound": "notification.mp3"
+  }
 } 
