--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -27,6 +27,6 @@
   "background_color": "#ffffff",
   "orientation": "portrait",
   "notifications": {
-    "sound": "notification.mp3"
+    "sound": "sounds/notification.mp3"
   }
 } 
